--- a/css/app.css
+++ b/css/app.css
@@ -1,25 +1,23 @@
 body{
-   background-image: url(../images/bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+   background-color:#242426 ;
+      box-sizing: border-box;
+
+    background-attachment:scroll;
 }
 .main {
     text-align: center;
     margin-top: 20%;
        font-family: 'Raleway', sans-serif;
-    color: #5D523C
+    color: #E1E3E4;
     padding-bottom: 20%;
 }
-img{
-    border-radius: 50%;
-    width: 6%;
+
  ;
 }
 
 a{
     text-decoration: none;
-    color: aliceblue;
+    color: #E1E3E4;
      font font-family: 'Raleway', sans-serif;
 
 }
@@ -41,11 +39,11 @@ a{
 #blog{
 
     text-align: center;
-    color: whitesmoke;
+    color: #E1E3E4
     padding-bottom: 5%;
 }
 #About-me{
-    color: whitesmoke;
+    color: #E1E3E4;
     text-align: center;
     padding-bottom: 2%;
     padding-left: 0;
@@ -107,30 +105,4 @@ a.button{
     margin-left: 50%;
 }
 
-#box    {  width:100%;
-           height:20%;
-           box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
-
-          margin:5% auto 0 auto;
-          background:url(http://ianfarb.com/wp-content/uploads/2013/10/nicholas-hodag.jpg);
-  background-size:cover;
-border-radius:5px;
-overflow:visible;
-}
-
-#overlay    {  background:rgba(0,0,0,.75);
-               text-align:center;
-
-               padding:45px 0 66px 0;
-               opacity:0.7;
-               -webkit-transition: opacity .25s ease;
--moz-transition: opacity .25s ease;}
-
-#box:hover #overlay {
-               opacity:1;}
-
-#plus       {  font-family:Helvetica;
-               font-weight:900;
-               color:rgba(255,255,255,.85);
-               font-size:96px;}
 
