--- a/css/app.css
+++ b/css/app.css
@@ -41,6 +41,8 @@ h4{
 
 h2{
     color: #444547;
+    text-align: center;
+    margin-top: 2%;
 }
 
 #portfolio {
@@ -80,8 +82,12 @@ h2{
     overflow: hidden;
 }
 #portfolio figure img{
-    width: 20%;
+    width:20%;
     float: left;
+    padding-left:  1%;
+     padding-right:  1%;
+     padding-bottom:  2%;
+    height: 650px;
 }
 #portfolio figure{
     position: relative;
@@ -90,5 +96,5 @@ h2{
     left: 0;
     text-align: left;
     font-size: 0;
-    animation: 20s portfolio infinite;
+    animation: 17s portfolio infinite;
 }
