--- a/css/app.css
+++ b/css/app.css
@@ -6,30 +6,20 @@ body{
     color: whitesmoke;
 
 }
-#nav ul {
-    list-style: none;
-    height: 10%;
-
-}
-#nav ul li{
-    float: left;
-    padding-left: 2%;
 
 
-}
-#nav ul li a{
-    color: seashell;
 
-}
+
 
 #nav {
-    margin-bottom: 25%
+
 }
 #about h1{
     font-family: 'Josefin Sans', sans-serif;
     text-align: center;
     font-size: 70px;
     color: seashell;
+    margin: 0;
 
 }
 h4{
@@ -37,16 +27,18 @@ h4{
     text-align: center;
     color: seashell;
     font-size: 50px;
+    margin: 0;
 }
 
 h2{
     color: #444547;
     text-align: center;
-    margin-top: 2%;
+
 }
 
 #portfolio {
-    margin-top: 29%
+    margin-top: 15%;
+
 }
 @keyframes portfolio{
     0%{
@@ -98,3 +90,8 @@ h2{
     font-size: 0;
     animation: 12s portfolio infinite;
 }
+ul li{
+    color: whitesmoke;
+}
+
+
