--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,6 @@ body{
     background-size: cover;
     font-family: 'Josefin Sans', sans-serif;
     color: whitesmoke;
-
 }
 
 
@@ -12,7 +11,7 @@ body{
 
 
 #nav {
-
+color: snow;
 }
 #about h1{
     font-family: 'Josefin Sans', sans-serif;
@@ -20,6 +19,7 @@ body{
     font-size: 70px;
     color: seashell;
     margin: 0;
+    padding: 0;
 
 }
 h4{
