--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@ h2{
 
 }
 
-#portfolio {
+#Portfolio {
     margin-top: 15%;
 
 }
@@ -70,7 +70,7 @@ h2{
     }
 
 }
-#portfolio{
+#Portfolio{
     overflow: hidden;
 }
 #portfolio figure img{
@@ -81,7 +81,7 @@ h2{
      padding-bottom:  2%;
     height: 650px;
 }
-#portfolio figure{
+#Portfolio figure{
     position: relative;
     width: 500%;
     margin: 0;
