--- a/css/app.css
+++ b/css/app.css
@@ -73,7 +73,7 @@ h2{
 #Portfolio{
     overflow: hidden;
 }
-#portfolio figure img{
+#Portfolio figure img{
     width:20%;
     float: left;
     padding-left:  1%;
